# mapJump

./: CMakeLists.txt  README.md
assets/: blue_cube.ai  neutral_spike.ai  player_text.ai  testing.ai
assets/illustrator/: blue_jump.ai  blue_spike_fade.ai  neutral_cube.ai  neutral_jump.ai  red_jump.ai  red_spike.ai
dep/nativefiledialog/: CMakeLists.txt
dep/tinyfiledialogs/: CMakeLists.txt
game/: CMakeLists.txt
game/levels/: level1.lvl  level2.lvl  level3.lvl  level4.lvl
game/src/: CMakeLists.txt  main.cpp
game/src/game/: CMakeLists.txt  defs.h  game_obj.h  handler.h  loader.h
game/src/graphics/: CMakeLists.txt  callback.h  input.h
game/src/graphics/objects/: CMakeLists.txt  buffers.h  object.h  solid_object.h  texture_object.h
game/src/graphics/shaders/: CMakeLists.txt  glsl_type.h
game/src/graphics/text/: CMakeLists.txt  text.h
game/src/graphics/texture/: CMakeLists.txt  texture.h
game/src/math/: CMakeLists.txt  vec.h
game/src/physics/: collision.h  particle.h
level_editor/: CMakeLists.txt
level_editor/src/: CMakeLists.txt  file_dialog.h  macros.h  main.cpp  saver.h  sizes.h  state.h  textures.h
level_editor/src/editor/: CMakeLists.txt  editor.h  saver.h  state.h
level_editor/src/game/: CMakeLists.txt  defs.h  file_obj.h  game_obj.h  handler.h  player.h  simulate.h  sizes.h  writer.h
level_editor/src/graphics/: CMakeLists.txt  application.h  button.h  callback.h  game_textures.h  input.h
level_editor/src/graphics/app/: CMakeLists.txt  application.h  callback.h  input.h
level_editor/src/graphics/menu/: CMakeLists.txt  button.h  menu.h
level_editor/src/graphics/objects/: buffers.h  object.h  solid_object.h  texture_object.h
level_editor/src/graphics/shaders/: glsl_type.h  shaders.h
level_editor/src/graphics/text/: text.h
level_editor/src/graphics/texture/: texture.h
level_editor/src/math/: constants.h  mat.h  vec.h
level_editor/src/physics/: CMakeLists.txt  bounding_box.h  collision.h  particle.h
level_editor/src/simulate/: CMakeLists.txt  game_obj.h  handler.h  player.h  simulate.h
level_editor/src/utils/: CMakeLists.txt  debug.h  file_dialog.h  timer.h
levels/: dummy.lvl  level_1.lvl  level_2.lvl  level_3.lvl  level_4.lvl  level_5.lvl  level_6.lvl  lucy.lvl  spike_test_7.lvl  spike_test_8.lvl  test.lvl  testLvl_0.lvl
src/: collision.cpp  collision.h  game.cpp  game.h  game_assets.h  gl_object.h  main.cpp
src/assets/: arial.h  background.h  blue_cube.h  blue_cube_fade.h  blue_jump.h  blue_spike.cpp  blue_spike.h  blue_spike_fade.cpp  blue_spike_fade.h  end_anchor.cpp  end_anchor.h  neutral_cube.h  neutral_jump.h  neutral_spike.cpp  neutral_spike.h  player_text.cpp  player_text.h  red_cube.cpp  red_cube.h  red_cube_fade.cpp  red_cube_fade.h  red_jump.h  red_spike.cpp  red_spike.h  red_spike_fade.cpp  red_spike_fade.h  spawn_anchor.cpp  spawn_anchor.h
src/include/: button.h  collision.h  game.h  game_assets.h  gl_instance.h  gl_object.h  level.h  menu.h  messages.h  rect.h  run_game.h  text.h  utility.h
src/src/: collision.cpp  file_dialog.cpp  game.cpp  gl_instance.cpp  level.cpp  level_editor.cpp  map_jump.cpp  menu.cpp  messages.cpp  run_game.cpp  text.cpp
